syntax = "proto3";

package gfs.grpc;

import "common/chunk_server.proto";
import "common/empty.proto";
import "metadata.proto";

service Master {
  // OpenFile returns the metadata of the file and creates
  // the file if it doesn't exist.
  rpc OpenFile(OpenFileRequest) returns (metadata.FileChunkMetadata);
  rpc ReportChunkServer(common.ChunkServer) returns (common.Empty);
}

message OpenFileRequest {
  string filename = 1;
  uint32 chunk_index = 2;
  OpenMode mode = 3;

  enum OpenMode {
    CREATE = 0;
    READ = 1;
    WRITE = 2;
  }
}